Fix blurry icon in customization panel FF29+

--- a/src/chrome/skin/copyurlsexpert.css
+++ b/src/chrome/skin/copyurlsexpert.css
@@ -1,3 +1,8 @@
 #copyurlsexpert-toolbar-btnmain {
   list-style-image: url(chrome://copy-urls-expert/skin/cue-icon16.png);
 }
+
+/* Inside customization panel, use a 32x32 image (FF 29+)*/
+.customization-palette #copyurlsexpert-toolbar-btnmain {
+  list-style-image: url(chrome://copy-urls-expert/skin/cue-icon.png);
+}
